--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,33 @@
             <artifactId>junit</artifactId>
             <version>4.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <!-- 指定maven编译的jdk版本,如果不指定,maven3默认用jdk 1.5 maven2默认用jdk1.3 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <!--
+                        一般而言，target与source是保持一致的，
+                        但是，有时候为了让程序能在其他版本的jdk中运行(对于低版本目标jdk，
+                        源代码中不能使用低版本jdk中不支持的语法)，会存在target不同于source的情况
+                    -->
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
